# data

./: README.md  build.sh  pyproject.toml
src/data/: bytes.py  compress.py
