[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data"
version = "0.0.2"
authors = [
  { name="luka598", email="luka598@tuta.io" },
]
description = "Package for manipulating packets or bytes or something like that"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"